--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-
+      - name: Install Playwright browsers
+        run: |
+          python -m playwright install --with-deps chromium
       - name: Run agent
         env:
           ACCOUNT: ${{ github.event.inputs.ACCOUNT }}
