--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,12 @@ name: Auto Video Agent
 
 on:
   schedule:
-    - cron: "0 */3 * * *"   # toutes les 3h (UTC)
+    # Publie toutes les 6 heures (UTC) → ~02h/08h/14h/20h en France l'été
+    - cron: "0 */6 * * *"
   workflow_dispatch:
     inputs:
       ACCOUNT:
-        description: "Compte (trucs-malins | gadgets-utiles)"
+        description: "Compte (ex: trucs-malins)"
         required: true
         default: "trucs-malins"
       POSTS_TO_PUBLISH:
@@ -21,6 +22,7 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -28,14 +30,21 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install ffmpeg
         run: |
-          pip install -r requirements.txt
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
 
-      - name: Install Playwright browsers
+      - name: Install Python dependencies (same interpreter)
         run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+
+      - name: Install Playwright + Chromium (same interpreter)
+        run: |
+          python -m pip install playwright==1.46.0
           python -m playwright install --with-deps chromium
 
       - name: Run agent
@@ -43,6 +52,6 @@ jobs:
           ACCOUNT: ${{ github.event.inputs.ACCOUNT }}
           POSTS_TO_PUBLISH: ${{ github.event.inputs.POSTS_TO_PUBLISH }}
           DRY_RUN: ${{ github.event.inputs.DRY_RUN }}
-          TIKTOK_COOKIE: ${{ secrets.TIKTOK_COOKIE }}   # <-- cookie 'sessionid' que tu as ajouté en secret
+          TIKTOK_COOKIE: ${{ secrets.TIKTOK_COOKIE }}   # cookie 'sessionid' TikTok
         run: |
           python main.py
