--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,25 @@
-name: Auto Video Agent
+name: Agent vidéo automatique
 
 on:
-  schedule:
-    # Publie toutes les 6 heures (UTC) → ~02h/08h/14h/20h en France l'été
-    - cron: "0 */6 * * *"
+  # Déclenchement manuel depuis l'onglet "Actions"
   workflow_dispatch:
     inputs:
       ACCOUNT:
-        description: "Compte (ex: trucs-malins)"
+        description: "Compte (ex: 'trucs→malins')"
         required: true
-        default: "trucs-malins"
+        default: "trucs→malins"
       POSTS_TO_PUBLISH:
-        description: "Nombre de publications à poster"
+        description: "Nombre de publications à effectuer"
         required: true
         default: "1"
       DRY_RUN:
-        description: "true = simulation, false = publication réelle"
+        description: "TRUE = simulation, FALSE = publication réelle"
         required: true
-        default: "false"
+        default: "FALSE"
+
+  # (Optionnel) Planifie des exécutions régulières — commente ou ajuste si besoin
+  # schedule:
+  #   - cron: "0 */6 * * *"   # toutes les 6h (UTC)
 
 jobs:
   run:
@@ -32,12 +34,12 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install ffmpeg
+      - name: Install system deps (ffmpeg)
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg
 
-      - name: Install Python dependencies (same interpreter)
+      - name: Upgrade pip + install requirements
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
@@ -47,13 +49,12 @@ jobs:
           python -m pip install playwright==1.46.0
           python -m playwright install --with-deps chromium
 
-    
-- name: Run agent
-  env:
-    ACCOUNT: ${{ github.event.inputs.ACCOUNT }}
-    POSTS_TO_PUBLISH: ${{ github.event.inputs.POSTS_TO_PUBLISH }}
-    DRY_RUN: ${{ github.event.inputs.DRY_RUN }}
-    TIKTOK_COOKIE: ${{ secrets.TIKTOK_COOKIE }}
-    TIKTOK_UA: ${{ secrets.TIKTOK_UA }}
-  run: |
-    python main.py
+      - name: Run agent
+        env:
+          ACCOUNT: ${{ github.event.inputs.ACCOUNT }}
+          POSTS_TO_PUBLISH: ${{ github.event.inputs.POSTS_TO_PUBLISH }}
+          DRY_RUN: ${{ github.event.inputs.DRY_RUN }}
+          TIKTOK_COOKIE: ${{ secrets.TIKTOK_COOKIE }}
+          TIKTOK_UA: ${{ secrets.TIKTOK_UA }}
+        run: |
+          python main.py
