--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,47 @@
 name: Agent vidéo automatique
 
 on:
-  # Déclenchement manuel depuis l'onglet "Actions"
+  # Déclenchement manuel avec paramètres
   workflow_dispatch:
     inputs:
       ACCOUNT:
-        description: "Compte (ex: 'trucs→malins')"
+        description: "Compte cible (ex: trucs-malins)"
         required: true
-        default: "trucs→malins"
+        default: "trucs-malins"
       POSTS_TO_PUBLISH:
         description: "Nombre de publications à effectuer"
         required: true
         default: "1"
       DRY_RUN:
-        description: "TRUE = simulation, FALSE = publication réelle"
+        description: "TRUE = simulation / FALSE = publication réelle"
         required: true
         default: "FALSE"
+  # Planification optionnelle (toutes les 6h)
+  schedule:
+    - cron: "0 */6 * * *"
 
-  # (Optionnel) Planifie des exécutions régulières — commente ou ajuste si besoin
-  # schedule:
-  #   - cron: "0 */6 * * *"   # toutes les 6h (UTC)
+permissions:
+  contents: read
 
 jobs:
   run:
+    name: courir
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+
+    # Variables d'environnement (inputs + secrets)
+    env:
+      PIP_DISABLE_PIP_VERSION_CHECK: "1"
+      PLAYWRIGHT_BROWSERS_PATH: "0"
+      PYTHONUNBUFFERED: "1"
+
+      ACCOUNT: ${{ github.event.inputs.ACCOUNT }}
+      POSTS_TO_PUBLISH: ${{ github.event.inputs.POSTS_TO_PUBLISH }}
+      DRY_RUN: ${{ github.event.inputs.DRY_RUN }}
+
+      # ⬇️ Secrets à définir dans Settings → Secrets and variables → Actions
+      TIKTOK_COOKIE: ${{ secrets.TIKTOK_COOKIE }}
+      TIKTOK_UA: ${{ secrets.TIKTOK_UA }}
 
     steps:
       - name: Checkout repo
@@ -34,27 +52,27 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install system deps (ffmpeg)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg
-
-      - name: Upgrade pip + install requirements
+      - name: Upgrade pip + install deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install playwright
+          fi
 
-      - name: Install Playwright + Chromium (same interpreter)
+      - name: Install Playwright + Chromium (même interpréteur)
         run: |
-          python -m pip install playwright==1.46.0
           python -m playwright install --with-deps chromium
 
-      - name: Run agent
-        env:
-          ACCOUNT: ${{ github.event.inputs.ACCOUNT }}
-          POSTS_TO_PUBLISH: ${{ github.event.inputs.POSTS_TO_PUBLISH }}
-          DRY_RUN: ${{ github.event.inputs.DRY_RUN }}
-          TIKTOK_COOKIE: ${{ secrets.TIKTOK_COOKIE }}
-          TIKTOK_UA: ${{ secrets.TIKTOK_UA }}
+      - name: Debug rapide
+        run: |
+          echo "ACCOUNT=$ACCOUNT"
+          echo "POSTS_TO_PUBLISH=$POSTS_TO_PUBLISH"
+          echo "DRY_RUN=$DRY_RUN"
+          ls -la
+          ls -la assets || true
+
+      - name: Exécuter l'agent
         run: |
           python main.py
